--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,10 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "duckdb>=1.1.3",
+    "folium>=0.19.4",
     "numpy>=2.2.1",
     "pandas>=2.2.3",
     "plotly>=6.0.0",
     "streamlit>=1.41.1",
+    "streamlit-folium>=0.24.0",
 ]
